# xtools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ci.sh  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  publish.yml  python.yml
docs/: conf.py  index.rst
tests/: test_base.py  test_page.py  test_project.py  test_quote.py  test_user.py
xtools/: __init__.py  base.py  exceptions.py  page.py  project.py  quote.py  tests.py  user.py
