[project]
name = "xtools"
version = "0.2.0"
description = "XTools API wrapper"
authors = [{ name = "Baptiste Fontaine", email = "b@ptistefontaine.fr" }]
requires-python = ">=3.8,<4.0"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["requests>=2.28.2,<3"]

[project.urls]
Homepage = "https://github.com/bfontaine/xtools"

[dependency-groups]
dev = [
    "types-requests>=2.28.11.17,<3",
    "mypy>=1,<2",
    "pytest>=7.2.2,<8",
    "sphinx>=6.1.3,<7",
    "requests-mock>=1.10.0,<2",
    "pytest-cov>=4.0.0,<5",
    "coveralls>=3.3.1,<4",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""
source-include = ["xtools/py.typed"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
